# acedev

./: .env.template  .gitignore  .replit  GitHubService.py  README.md  nixpacks.toml  pyproject.toml
.github/workflows/: python-app.yml
acedev/: main.py
acedev/agent/: __init__.py  coding_agent.py  github_agent.py  github_agent_factory.py  openai_agent.py  openai_agent_runner.py  prompts.py
acedev/api/: agent.py  api.py  dependencies.py  pull_request.py  root.py  settings.py  webhook.py
acedev/service/: GitHubService.py  coding.py  git_repository.py  github_service.py  gitrepository.py  llm.py  model.py  openai_service.py  parsing.py  planning.py  project.py  prompts.py  symbol_manipulator.py  tool_provider.py
acedev/service/agent/: __init__.py  langchain_agent.py  openai_agent.py
acedev/tools/: code_editor.py  symbol_manipulator.py  tool_provider.py
acedev/utils/: parsing.py  prompts.py
docs/: github_app.md
tests/: conftest.py  test_agent_prompts.py  test_api.py  test_code_editor.py  test_coding_agent.py  test_github_agent.py  test_github_agent_factory.py  test_github_service.py  test_gitrepository.py  test_openai_agent_runner.py  test_prompts.py  test_symbol_manipulator.py  test_tool_provider.py
